# azure-container-registry-init

./: README.md  config.json  github.py  pyproject.toml  replicationsetup.py  subscription_id.py
